/*
 * Copyright (C) 2020 The SureThing project
 * @author João Tiago <joao.marques.tiago@tecnico.ulisboa.pt>
 * http://surething.tecnico.ulisboa.pt/en/
 */

package pt.ulisboa.tecnico.surespace.arduino;

import java.util.Scanner;

public class ArduinoApp {
  private static final Scanner SCANNER = new Scanner(System.in);

  public static void main(String[] args) throws Exception {}
}
