@startuml

title __ARDUINO's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.arduino {
    class pt.ulisboa.tecnico.surespace.arduino.ArduinoApp {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace device {
      class pt.ulisboa.tecnico.surespace.arduino.device.LightBeacon {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace device {
      class pt.ulisboa.tecnico.surespace.arduino.device.LightWitness {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace device {
      abstract class pt.ulisboa.tecnico.surespace.arduino.device.SensorWitness {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace device {
      class pt.ulisboa.tecnico.surespace.arduino.device.SoundBeacon {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace device {
      class pt.ulisboa.tecnico.surespace.arduino.device.SoundWitness {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace device {
      namespace exception {
        class pt.ulisboa.tecnico.surespace.arduino.device.exception.LEDDeviceException {
        }
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace exception {
      class pt.ulisboa.tecnico.surespace.arduino.exception.ArduinoException {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace pin {
      class pt.ulisboa.tecnico.surespace.arduino.pin.AnalogArduinoPin {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace pin {
      abstract class pt.ulisboa.tecnico.surespace.arduino.pin.ArduinoPin {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace pin {
      class pt.ulisboa.tecnico.surespace.arduino.pin.DigitalArduinoPin {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace pin {
      namespace listener {
        abstract class pt.ulisboa.tecnico.surespace.arduino.pin.listener.ArduinoListener {
        }
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.arduino {
    namespace pin {
      namespace listener {
        class pt.ulisboa.tecnico.surespace.arduino.pin.listener.ArduinoPinListener {
        }
      }
    }
  }
  

  pt.ulisboa.tecnico.surespace.arduino.device.LightBeacon -up-|> pt.ulisboa.tecnico.surespace.arduino.pin.DigitalArduinoPin
  pt.ulisboa.tecnico.surespace.arduino.device.LightWitness -up-|> pt.ulisboa.tecnico.surespace.arduino.device.SensorWitness
  pt.ulisboa.tecnico.surespace.arduino.device.SensorWitness -up-|> pt.ulisboa.tecnico.surespace.arduino.pin.AnalogArduinoPin
  pt.ulisboa.tecnico.surespace.arduino.device.SoundBeacon -up-|> pt.ulisboa.tecnico.surespace.arduino.pin.DigitalArduinoPin
  pt.ulisboa.tecnico.surespace.arduino.device.SoundWitness -up-|> pt.ulisboa.tecnico.surespace.arduino.device.SensorWitness
  pt.ulisboa.tecnico.surespace.arduino.device.exception.LEDDeviceException -up-|> pt.ulisboa.tecnico.surespace.arduino.exception.ArduinoException
  pt.ulisboa.tecnico.surespace.arduino.pin.AnalogArduinoPin -up-|> pt.ulisboa.tecnico.surespace.arduino.pin.ArduinoPin
  pt.ulisboa.tecnico.surespace.arduino.pin.ArduinoPin .up.|> java.lang.AutoCloseable
  pt.ulisboa.tecnico.surespace.arduino.pin.DigitalArduinoPin -up-|> pt.ulisboa.tecnico.surespace.arduino.pin.ArduinoPin
  pt.ulisboa.tecnico.surespace.arduino.pin.listener.ArduinoPinListener .up.|> org.ardulink.core.events.EventListener
  pt.ulisboa.tecnico.surespace.arduino.pin.listener.ArduinoPinListener o-- pt.ulisboa.tecnico.surespace.arduino.pin.listener.ArduinoListener : listener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
